update from master

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,15 @@
 *.pyc
 
 *.dataset
+*.hdf5
 VoigtFit.zip
 backup/*
+*.fit
+*.pdf
+*.cont
+
+doc/VoigtFit_mini_language.pdf
+
+HI_input.pars
+
+input.pars
