--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -20,7 +20,7 @@ formats:
   - htmlzip
 
 ## Optionally set the version of Python and requirements required to build your docs
-#python:
-#  version: 3.7
-#  install:
-#    - requirements: docs/requirements.txt
+python:
+  install:
+    - requirements: docs/requirements.txt
+# version: 3.7
