Removed local folders of docs

--- a/.gitignore
+++ b/.gitignore
@@ -21,10 +21,7 @@ backup
 .input.pars.swp
 
 docs/_build
-docs/_build/*
-docs/_build/html
-docs/_build/doctrees
-docs/_static/*
+docs/_static
 
 build
 
