--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,3 +1,8 @@
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
   configuration: docs/conf.py
+
+python:
+   version: 3.8
+   install:
+   - requirements: docs/requirements.txt
