--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,8 +1,10 @@
 # Build documentation in the docs/ directory with Sphinx
+version: 2
+
 sphinx:
   configuration: docs/conf.py
 
 python:
-   version: 3.8
+   version: "3.8"
    install:
    - requirements: docs/requirements.txt
