--- a/docs/Makefile
+++ b/docs/Makefile
@@ -3,8 +3,8 @@
 
 # You can set these variables from the command line.
 SPHINXOPTS    =
-#SPHINXBUILD   = sphinx-build
-SPHINXBUILD   = python3 -msphinx
+SPHINXBUILD   = sphinx-build
+#SPHINXBUILD   = python3 -msphinx
 SPHINXPROJ    = VoigtFit
 SOURCEDIR     = .
 BUILDDIR      = _build
