--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,10 +1,10 @@
 # docs/requirements.txt
-numpydoc==1.1.0
-numpy==1.19.2
-sphinx==4.1.2
-matplotlib==3.3.2
-lmfit==1.0.1
-scipy==1.5.3
-numba==0.51.2
-astropy==4.1
-h5py==2.10.0
+numpydoc
+numpy
+sphinx
+matplotlib
+lmfit
+scipy
+numba
+astropy
+h5py
