--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -4,7 +4,12 @@ version: 2
 sphinx:
   configuration: docs/conf.py
 
+build:
+  os: ubuntu-22.04
+  tools:
+    python: "3.11"
+
 python:
-   version: "3.8"
+   version: "3.11"
    install:
    - requirements: docs/requirements.txt
