--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,8 @@
 name = "VoigtFit"
 version = "3.22"
 requires-python = ">=3.8"
-license = {file = "LICENSE"}
+license = "MIT"
+license-files = ["LICENSE*"]
 authors = [
   {name = "Jens-Kristian Krogager", email = "jens-kristian.krogager@univ-lyon1.fr"},
 ]
